# dogtea-miniapp

./: Procfile  README.md  app.py  bot.py  config.py  create_archive.py  gereksinimler.txt  main.py  models.py  pyproject.toml  requirements.txt  simple_bot.py  standalone_bot.py
bot/: ana.py  ayarlar.py  komutlar.py  main.py  oyunlar.py  veritabani.py
games/: __init__.py  battle_system.py  click_game.py  guess_game.py  loot_box.py  quiz_game.py
handlers/: callback_handlers.py  command_handlers.py  game_handlers.py  payment_handlers.py
locales/: __init__.py  ar.py  en.py  ru.py  tr.py
miniapp/: app.py
network/: miniapp.py  sunucu.py
static/css/: styles.css
static/js/: webapp.js
templates/: index.html  profile.html  shop.html  webapp.html
utils/: dog_utils.py  language_utils.py  token_utils.py  user_utils.py
web/: server.py
