[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "payment>=0.0.1.2",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.26.0",
    "python-telegram-bot[job-queue]>=20.0",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "tlgbotfwk>=0.4.61",
    "translations>=0.1.3",
    "werkzeug>=3.1.3",
]
